--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -74,9 +74,9 @@
    ],
    "source": [
     "#find title or paragraphs    \n",
-    "news_title = result.find('div', class_='content_title').text\n",
+    "news_title = soup.find('div', class_='content_title').text\n",
     "\n",
-    "news_p = result.find('div', class_='article_teaser_body').text\n",
+    "news_p = soup.find('div', class_='article_teaser_body').text\n",
     "\n",
     "    \n",
     "\n",
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,6 +119,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars/spaceimages/images/wallpaper/PIA19952-1920x1200.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "#JPL_home_url = \"https://www.jpl.nasa.gov\"\n",
+    "#JPL_img_url = JPL_home_url+\"/spaceimages/?search=&category=Mars\"\n",
+    "items = soup.find(\"div\",{\"class\":\"carousel_items\"})\n",
+    "\n",
+    "featured_img = items.find(\"article\")\n",
+    "featured_img_url = image_url+featured_img['style'].split(':')[1].split('\\'')[1]\n",
+    "print(featured_img_url)\n",
+    "          "
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -127,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,16 +176,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'InSight sol 88 (2019-02-25) low -95.2ºC (-139.4ºF) high -17.8ºC (0.0ºF)\\nwinds from the SW at 5.2 m/s (11.6 mph) gusting to 19.8 m/s (44.3 mph)\\npressure at 7.20 hPapic.twitter.com/1msjBvhiu7'"
+       "'InSight sol 89 (2019-02-26) low -95.1ºC (-139.2ºF) high -14.4ºC (6.1ºF)\\nwinds from the SW at 4.3 m/s (9.6 mph) gusting to 12.4 m/s (27.8 mph)\\npressure at 7.20 hPapic.twitter.com/h8gODY5bfk'"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,28 +215,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 94,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Values</th>\\n    </tr>\\n    <tr>\\n      <th>Decription</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Equatorial Diameter:</th>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>Polar Diameter:</th>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.42 x 10^23 kg (10.7% Earth)</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Distance:</th>\\n      <td>227,943,824 km (1.52 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>Orbit Period:</th>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>Surface Temperature:</th>\\n      <td>-153 to 20 °C</td>\\n    </tr>\\n    <tr>\\n      <th>First Record:</th>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>Recorded By:</th>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>'"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#build dataframe\n",
     "mars_data= pd.read_html(facts_url)\n",
     "mars_data = pd.DataFrame(mars_data[0])\n",
     "mars_data.columns =[\"Decription\", \"Values\"]\n",
     "mars_data = mars_data.set_index(\"Decription\")\n",
-    "mars_data_html = mars_data.to_html()\n",
-    "mars_data_html"
+    "mars_data_html = mars_data.to_html('mars_data.html')\n",
+    "#mars_data_html\n"
    ]
   },
   {
@@ -222,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -507,14 +522,14 @@
       "    <form action=\"/search/results\" class=\"search\" id=\"search\" method=\"get\">\n",
       "     <input title=\"Search Astropedia\" type=\"submit\" value=\"\"/>\n",
       "     <input name=\"q\" placeholder=\"Search\" type=\"text\"/>\n",
-      "     <input name=\"__ncforminfo\" type=\"hidden\" value=\"ocY_smvxkJAiyceWnazf-JEJyqqffgs733arpeVhrCwFEFkD2kwlOSeqIPEMkLUdNzY3CMucUQdh8k4ozwsdDxBK3MBs_MlmLc40j4ZaMp8=\"/>\n",
+      "     <input name=\"__ncforminfo\" type=\"hidden\" value=\"tPOu4_Qdap3YoPL-6yDaJpKSyh19gKSKYZgpZfFKHQuqpwrpl6utz1VAh5ipCVR0p0gnWLm7gwglqL_Fv3mY5wTWl-EFhSjIOnGAbeZN_fc=\"/>\n",
       "    </form>\n",
       "   </nav>\n",
       "   <div class=\"container\">\n",
       "    <form action=\"/search/results\" class=\"bar widget block\" id=\"search-bar\">\n",
       "     <input name=\"q\" type=\"hidden\" value=\"hemisphere-enhanced\"/>\n",
       "     <input name=\"target\" type=\"hidden\" value=\"Mars\"/>\n",
-      "     <input name=\"__ncforminfo\" type=\"hidden\" value=\"ocY_smvxkJAiyceWnazf-JEJyqqffgs733arpeVhrCwH2KnSZ1zqqJT8SYxOymemtyaZlkenNfBADw2SyJIRR7fZB4G_9iPjhDIoBqdo8bxy6uZh7YW3GQ==\"/>\n",
+      "     <input name=\"__ncforminfo\" type=\"hidden\" value=\"tPOu4_Qdap3YoPL-6yDaJpKSyh19gKSKYZgpZfFKHQsX3HtSqSVLXGH-5mgDFeBoAlcJdM8qnEvNSjA5s96R9AO6mo_I_XtAM8huv1VTSMkyiostjOeiKA==\"/>\n",
       "    </form>\n",
       "    <div class=\"full-content\">\n",
       "     <section class=\"block\" id=\"results-accordian\">\n",
@@ -748,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -760,7 +775,7 @@
        " <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/valles_marineris_enhanced\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/04085d99ec3713883a9a57f42be9c725_valles_marineris_enhanced.tif_thumb.png\"/><div class=\"description\"><h3>Valles Marineris Hemisphere Enhanced</h3></div></a><span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p></div>]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,39 +788,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "ResultSet object has no attribute 'find_all'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-77-289ca266613b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     17\u001b[0m         \u001b[1;31m# Identify and image\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 18\u001b[1;33m         \u001b[0mimage_url\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mresults\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfind_all\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"src\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     19\u001b[0m \u001b[1;31m#dictionary\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     20\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\bs4\\element.py\u001b[0m in \u001b[0;36m__getattr__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   1882\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m__getattr__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1883\u001b[0m         raise AttributeError(\n\u001b[1;32m-> 1884\u001b[1;33m             \u001b[1;34m\"ResultSet object has no attribute '%s'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1885\u001b[0m         )\n",
+      "\u001b[1;31mAttributeError\u001b[0m: ResultSet object has no attribute 'find_all'. You're probably treating a list of items like a single item. Did you call find_all() when you meant to call find()?"
+     ]
+    }
+   ],
    "source": [
     "# Loop through returned results\n",
     "mars_hemispheres =[]\n",
     "for result in results:\n",
     "        # Identify and return title of listing\n",
     "        title = result.find('a', class_=\"itemLink product-item\").text\n",
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
     "        # Identify and image\n",
-    "        image_url = result.a['href']\n",
+    "        image_url = results.find_all(\"src\")\n",
     "#dictionary\n",
     "\n",
-    "mars_dictionary={\"Title\":title, \"img_url\":image_url}\n",
-    "mars_hemispheres.append(mars_dictionary)\n"
+    "        mars_dictionary={\"Title\":title, \"img_url\": hemispheres_url+image_url}\n",
+    "        mars_hemispheres.append(mars_dictionary)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[{'Title': 'Valles Marineris Hemisphere Enhanced', 'img_url': '/search/map/Mars/Viking/valles_marineris_enhanced'}]\n"
+      "[{'Title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars/search/map/Mars/Viking/cerberus_enhanced'}, {'Title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars/search/map/Mars/Viking/schiaparelli_enhanced'}, {'Title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars/search/map/Mars/Viking/syrtis_major_enhanced'}, {'Title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars/search/map/Mars/Viking/valles_marineris_enhanced'}]\n"
      ]
     }
    ],
    "source": [
     "print(mars_hemispheres)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
